--- a/css/programi.css
+++ b/css/programi.css
@@ -79,3 +79,77 @@
     will-change: opacity;
 }
 
+@media (max-width: 900px)
+{
+
+.image
+{
+    display: flex;
+    flex-direction: column;
+    width: 10rem;
+    min-width: 10rem;
+    max-width: 10rem;
+    height: 10rem;
+    min-height: 10rem;
+    max-height: 10rem;
+}
+
+.image>img
+{
+    flex: 1 0;
+    visibility: hidden;
+    width: initial;
+    min-width: 0;
+    max-width: 100%;
+    height: initial;
+    min-height: 0;
+    max-height: 100%;
+}
+
+}
+
+@media (max-width: 600px)
+{
+
+.program
+{
+    flex-direction: column;
+}
+
+
+.image
+{
+    width: initial;
+    min-width: initial;
+    max-width: 100%;
+    height: initial;
+    min-height: initial;
+    max-height: 10rem;
+    margin: 0 1em;
+}
+
+.description
+{
+    margin-top: 1em;
+}
+
+.dates
+{
+    padding: 0 1rem;
+}
+
+.actions
+{
+    display: flex;
+    flex-direction: row;
+    padding: 0 1rem;
+    justify-content: flex-end;
+}
+
+.actions>a
+{
+margin: 0;
+    padding: 0 1em;
+}
+}
+
