--- a/css/tekstovi.css
+++ b/css/tekstovi.css
@@ -7,14 +7,6 @@
     box-shadow: .7em .7em #000;
 }
 
-.texts>tbody
-{
-    display: block;
-    padding: .5em;
-    margin: .5em;
-    border: 3px double #a3a383;
-}
-
 .text
 {
     display: table-row;
@@ -24,7 +16,8 @@
 .icon
 {
     vertical-align: top;
-    padding: .5em;
+    padding: 1.5em 1em;
+    padding-right: 0;
 }
 
 .icon>svg
@@ -40,7 +33,8 @@
 {
     display: table-cell;
     flex-grow: 1;
-    padding: 1em;
+    padding: 1.5em 1em;
+    padding-right: 0;
 }
 
 .description>h1,
@@ -77,8 +71,10 @@
     flex-grow: 0;
     flex-shrink: 0;
     white-space: nowrap;
-    padding: 0 .5em;
+    padding: 1.5em 1em;
+    vertical-align: top;
     text-align: center;
+    line-height: 1em;
 }
 
 .date:last-child
