--- a/css/tekstovi.css
+++ b/css/tekstovi.css
@@ -4,7 +4,9 @@
     background-color: #212121;
     border-spacing: 0;
     margin: 1em 0;
+    margin-right: .75rem;
     box-shadow: .7em .7em #000;
+    align-self: stretch;
 }
 
 .text
@@ -25,8 +27,6 @@
     border-radius: 50%;
     padding: .5em;
     color: #fff;
-    /*color: #000;*/
-    /*background-color: #bdcc49;*/
 }
 
 .description
@@ -46,13 +46,22 @@
     padding: 0;
 }
 
+.description>h1,
+.description>h2,
+.description>h3,
+.description>h4
+{
+    margin-bottom: 1em;
+    font-family: "Fira Sans Extra Condensed", sans-serif;
+    font-size: 16pt;
+}
 
 .description>h1 a,
 .description>h2 a,
 .description>h3 a,
 .description>h4 a
 {
-    color: ##a3a383;
+    color: #a3a383;
     text-decoration: none;
 }
 
@@ -65,6 +74,11 @@
     color: #121212;
 }
 
+main .content .text p
+{
+    line-height: 1.5em;
+}
+
 .date
 {
     display: table-cell;
@@ -75,6 +89,12 @@
     vertical-align: top;
     text-align: center;
     line-height: 1em;
+}
+
+th.date
+{
+    padding: .5rem 1rem;
+    vertical-align: middle;
 }
 
 .date:last-child
@@ -118,6 +138,19 @@
 .texts td
 {
     display: block;
+}
+
+.description>h1,
+.description>h2,
+.description>h3,
+.description>h4
+{
+    margin-right: 1rem;
+}
+
+main .content .text p
+{
+    margin-right: 1em;
 }
 
 .date
